--- a/main1.css
+++ b/main1.css
@@ -240,16 +240,38 @@ body {
 
 /* Styles pour les écrans larges (ordinateurs) */
 @media screen and (min-width: 768px) {
-  .navPanelToggle {
-    display: none;
-  }
+    /* Masquer le menu déroulant sur les grands écrans */
+    #nav {
+        display: flex;
+        justify-content: center; /* Centrer horizontalement les onglets */
+        margin-top: 20px; /* Espacement entre le logo et les onglets */
+    }
+}
 
-  /* Afficher les onglets côte à côte sur les écrans d'ordinateur */
-  #nav {
-    flex-direction: row;
-  }
+/* Médias queries pour les appareils mobiles */
+@media screen and (max-width: 768px) {
+    /* Icône de menu pour les petits écrans */
+    #toggle-menu {
+        display: block;
+        color: #fff;
+        font-size: 24px;
+        cursor: pointer;
+    }
 
-  #nav a {
-    margin: 0 10px;
-  }
+    /* Masquer le menu sur les petits écrans */
+    #nav {
+        display: none;
+        flex-direction: column;
+        background-color: #1a1a1a; /* Noir ou gris foncé */
+        padding: 10px;
+        position: absolute;
+        top: 60px; /* Ajuster la position verticale du menu déroulant */
+        right: 20px; /* Ajuster la position horizontale du menu déroulant */
+        z-index: 1; /* Assurer que le menu déroulant s'affiche au-dessus du contenu */
+    }
+
+    /* Réduire l'espace entre les liens de navigation dans le menu déroulant */
+    #nav a {
+        margin: 5px 0;
+    }
 }
